replace sarxos/openimaj library with openpnp-capture library